@@ -17,8 +17,9 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
-import jersey.repackaged.com.google.common.collect.ImmutableMap;
+
 import retrofit2.Call;
 import retrofit2.Response;
 import retrofit2.Retrofit;
@@ -133,7 +134,7 @@ public class binanceMethods {
 
         ///   ONLY PROBLEM IS THE GENERATE SIGNATURE METHOD
 
-        ImmutableMap<String,String> immutableMap = ImmutableMap.of("recvWindow",String.valueOf(data.get("recvWindow")),"timestamp",String.valueOf(data.get("timestamp")),"signature",data.get("signature"));
+        Map<String,String> immutableMap = Map.of("recvWindow",String.valueOf(data.get("recvWindow")),"timestamp",String.valueOf(data.get("timestamp")),"signature",data.get("signature"));
 
         Call<Account> accountCall = accountInfoGet.getAccount(immutableMap,apiKey);
         try {
@@ -173,7 +174,7 @@ public class binanceMethods {
 
         ///   ONLY PROBLEM IS THE GENERATE SIGNATURE METHOD
 
-        ImmutableMap<String,String> immutableMap = ImmutableMap.of("recvWindow",String.valueOf(data.get("recvWindow")),"timestamp",String.valueOf(data.get("timestamp")),"signature",data.get("signature"));
+        Map<String,String> immutableMap = Map.of("recvWindow",String.valueOf(data.get("recvWindow")),"timestamp",String.valueOf(data.get("timestamp")),"signature",data.get("signature"));
 
         Call<Account> accountCall = accountInfoGet.getAccount(immutableMap,apiKey);
         try {
@@ -234,7 +235,7 @@ public class binanceMethods {
 
         getOpenOrderList openOrderListCmd = retrofit.create(getOpenOrderList.class);
 
-        ImmutableMap<String,String> immutableMap = ImmutableMap.of("recvWindow", data.get("recvWindow"), "timestamp", data.get("timestamp"), "signature", data.get("signature"));
+        Map<String,String> immutableMap = Map.of("recvWindow", data.get("recvWindow"), "timestamp", data.get("timestamp"), "signature", data.get("signature"));
 
         Call<OpenOrderList> openOrderListCall = openOrderListCmd.openOrderListQuery(immutableMap,apiKey);
 
@@ -443,7 +444,7 @@ public class binanceMethods {
 
                 String signature = getSignature(url, data);
 
-                ImmutableMap<String, String> immutableMap = ImmutableMap.of("symbol", symbol, "side", side, "type", type, "timestamp", timeStamp, "signature", signature);
+                Map<String, String> immutableMap = Map.of("symbol", symbol, "side", side, "type", type, "timestamp", timeStamp, "signature", signature);
 
                 Retrofit retrofit = new Retrofit.Builder()
                         .baseUrl(url)
@@ -603,7 +604,7 @@ public class binanceMethods {
 
                 String signature = getSignature(url, data);
 
-                ImmutableMap<String, String> immutableMap = ImmutableMap.of("symbol", symbol, "side", side, "type", type, "timestamp", timeStamp, "signature", signature);
+                Map<String, String> immutableMap = Map.of("symbol", symbol, "side", side, "type", type, "timestamp", timeStamp, "signature", signature);
 
                 Retrofit retrofit = new Retrofit.Builder()
                         .baseUrl(url)
